--- a/ILovePizza/public/css/main.css
+++ b/ILovePizza/public/css/main.css
@@ -12,7 +12,7 @@ header {
 body {
     overflow-x: hidden;
     overflow-y: hidden;
-    font-family: "DM Sans", sans-serif;
+
     background-color: #f2f5f7;
     line-height: 1.5;
     min-height: 300vh;
@@ -547,6 +547,12 @@ footer {
     margin: 5px 0 5px 0;
     font-size: 1rem;
     font-weight: 300;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    text-align: center;
+    margin: 30px;
 }
 
 .corp {
